--- a/CBI/byobu/install/Makefile
+++ b/CBI/byobu/install/Makefile
@@ -1,32 +1,7 @@
 #' Example:
 #' make VERSION=5.124
 
-NAME=byobu
-
-MODULE_NAME=$(NAME)
-
-ifndef VERSION
-  $(error ERROR: Environment variable 'VERSION' is not set)
-endif
-
-ifndef BUILD_HOME
-  ifndef TMPDIR
-    $(error ERROR: Environment variable 'TMPDIR' is not set)
-  endif
-  BUILD_HOME=$(TMPDIR)
-endif
-
-BUILD_NAME=$(NAME)-$(VERSION)$(BUILD_SUFFIX)
-
-BUILD_PATH=$(BUILD_HOME)/$(BUILD_NAME)
-
-ifndef SOFTWARE_HOME
-  $(error ERROR: Environment variable 'SOFTWARE_HOME' is not set)
-endif
-
-ifndef PREFIX
-  PREFIX=$(SOFTWARE_HOME)/$(NAME)-$(VERSION)
-endif
+include ../utils.mk
 
 TARBALL=$(NAME)_$(VERSION)$(BUILD_SUFFIX).orig.tar.gz
 
