CLEANUP: Using centralized utils.mk

--- a/CBI/byobu/install/Makefile
+++ b/CBI/byobu/install/Makefile
@@ -1,7 +1,7 @@
 #' Example:
 #' make VERSION=5.124
 
-include ../utils.mk
+include ../../utils.mk
 
 TARBALL=$(NAME)_$(VERSION)$(BUILD_SUFFIX).orig.tar.gz
 
