--- a/CBI/htop/install/Makefile
+++ b/CBI/htop/install/Makefile
@@ -5,18 +5,22 @@ include ../../utils.mk
 
 TARBALL=$(NAME)-$(VERSION).tar.gz
 
-all: debug build install
+all: debug build check install
 
 $(BUILD_PATH)/$(NAME)-$(VERSION):
 	mkdir -p $(BUILD_PATH); \
 	cd $(BUILD_PATH); \
-	curl -L -O https://github.com/tmux/tmux/releases/download/$(VERSION)/$(TARBALL); \
-	tar xvfz $(TARBALL)
+	curl -O http://hisham.hm/htop/releases/$(VERSION)/$(TARBALL); \
+	tar -xvzf $(TARBALL)
 
 build: $(BUILD_PATH)/$(NAME)-$(VERSION)
 	cd $(BUILD_PATH)/$(NAME)-$(VERSION); \
 	./configure --prefix=$(PREFIX); \
 	make
+
+check: build
+	cd $(BUILD_PATH)/$(NAME)-$(VERSION); \
+	make check
 
 install: build
 	cd $(BUILD_PATH)/$(NAME)-$(VERSION); \
