--- a/CBI/libevent/Makefile
+++ b/CBI/libevent/Makefile
@@ -2,19 +2,6 @@
 #' make VERSION=2.1.8
 
 NAME=libevent
+URL=https://github.com/libevent/libevent/releases
 
-all: debug install
-
-debug:
-	@echo "NAME: $(NAME)"
-	@echo "VERSION: $(VERSION)"
-
-install_software:
-	cd install; \
-	make
-
-install_module:
-	cd module; \
-	make
-
-install: install_software install_module
+include ../utils.mk
