--- a/CBI/libevent/install/Makefile
+++ b/CBI/libevent/install/Makefile
@@ -1,48 +1,10 @@
 #' Example:
 #' make NAME=libevent VERSION=2.1.8
 
-ifndef NAME
-  $(error ERROR: Environment variable 'NAME' is not set)
-endif
-
-ifndef VERSION
-  $(error ERROR: Environment variable 'VERSION' is not set)
-endif
-
 BUILD_SUFFIX=-stable
-
-MODULE_NAME=$(NAME)
-
-ifndef BUILD_HOME
-  BUILD_HOME=$(TMPDIR)
-endif
-
-BUILD_NAME=$(NAME)-$(VERSION)$(BUILD_SUFFIX)
-
-BUILD_PATH=$(BUILD_HOME)/$(BUILD_NAME)
-
-ifndef SOFTWARE_HOME
-  $(error ERROR: Environment variable 'SOFTWARE_HOME' is not set)
-endif
-
-ifndef PREFIX
-  PREFIX=$(SOFTWARE_HOME)/$(NAME)-$(VERSION)
-endif
-
-TARBALL=$(BUILD_NAME).tar.gz
+include ../../utils.mk
 
 all: debug install
-
-debug:
-	@echo "NAME: $(NAME)"
-	@echo "VERSION: $(VERSION)"
-	@echo "SOFTWARE_HOME: $(SOFTWARE_HOME)"
-	@echo "PREFIX: $(PREFIX)"
-	@echo "BUILD_HOME: $(BUILD_HOME)"
-	@echo "BUILD_PATH: $(BUILD_PATH)"
-	@echo "BUILD_SUFFIX: $(BUILD_SUFFIX)"
-	@echo "BUILD_NAME: $(BUILD_NAME)"
-
 
 $(BUILD_PATH):
 	cd $(BUILD_HOME); \
