--- a/CBI/tmux/Makefile
+++ b/CBI/tmux/Makefile
@@ -1,7 +1,20 @@
 #' Example:
 #' make VERSION=2.6
 
-NAME=tmux
-URL=https://github.com/tmux/tmux/releases
-
+include config.mk
 include ../utils.mk
+
+
+## ----------------------------------------------------------
+## SOFTWARE
+## ----------------------------------------------------------
+$(DOWNLOAD_TARGET):
+	mkdir -p $(BUILD_HOME); \
+	cd $(BUILD_HOME); \
+	curl -L -O https://github.com/tmux/tmux/releases/download/$(VERSION)/$(TARBALL); \
+	tar xvfz $(TARBALL)
+
+
+## ----------------------------------------------------------
+## MODULE
+## ----------------------------------------------------------
