--- a/CBI/htop/Makefile
+++ b/CBI/htop/Makefile
@@ -1,7 +1,20 @@
 #' Example:
 #' make VERSION=2.2.0
 
-NAME=htop
-URL=https://hisham.hm/htop/releases/
-
+include config.mk
 include ../utils.mk
+
+
+## ----------------------------------------------------------
+## SOFTWARE
+## ----------------------------------------------------------
+$(DOWNLOAD_TARGET):
+	mkdir -p $(BUILD_HOME); \
+	cd $(BUILD_HOME); \
+	curl -O http://hisham.hm/htop/releases/$(VERSION)/$(TARBALL); \
+	tar xvfz $(TARBALL)
+
+
+## ----------------------------------------------------------
+## MODULE
+## ----------------------------------------------------------
