CLEANUP: Skip config and build dummies

--- a/CBI/qtop/Makefile
+++ b/CBI/qtop/Makefile
@@ -10,7 +10,7 @@ $(DOWNLOAD_TARGET):
 	curl -L -O https://github.com/qtop/${NAME}/archive/v${VERSION}.tar.gz; \
 	tar xzf v${VERSION}.tar.gz
 
-$(INSTALL_TARGET): $(BUILD_TARGET)
+$(INSTALL_TARGET): $(DOWNLOAD_TARGET)
 	mkdir -p $(SOFTWARE_HOME)
 	mkdir -p $(PREFIX)
 	cp -R $(BUILD_PATH) $(PREFIX)/..
