--- a/CBI/cellranger/Makefile
+++ b/CBI/cellranger/Makefile
@@ -17,6 +17,6 @@ $(DOWNLOAD_TARGET):
 $(INSTALL_TARGET): $(DOWNLOAD_TARGET)
 	mkdir -p $(PREFIX)
 	cp -p -R $(BUILD_HOME)/$(NAME)-$(VERSION) $(PREFIX)/..
-	make post_install_software
+	make post_install
 	ls -la $(PREFIX)
 	@echo "SOFTWARE INSTALLED TO: $(PREFIX)"
