--- a/CBI/libevent/Makefile
+++ b/CBI/libevent/Makefile
@@ -15,5 +15,5 @@ $(DOWNLOAD_TARGET):
 
 ## FIXME: This fail on Wynton with:
 ## [msg] Nameserver 127.0.0.1:51382 has failed: request timed out.
-check_software: $(BUILD_TARGET)
+check: $(BUILD_TARGET)
 	cd $(BUILD_PATH); \
