--- a/CBI/pindel/Makefile
+++ b/CBI/pindel/Makefile
@@ -22,6 +22,6 @@ $(BUILD_TARGET): $(DOWNLOAD_TARGET)
 $(INSTALL_TARGET): $(BUILD_TARGET)
 	mkdir -p $(PREFIX)
 	cp -R $(BUILD_PATH) $(PREFIX)/..
-	make post_install_software
+	make post_install
 	ls -la $(PREFIX)
 	@echo "SOFTWARE INSTALLED TO: $(PREFIX)"
