UPDATES: bowtie2 2.3.5.1, byobu 5.129, emacs 26.2, gatk 4.1.2.0, git-flow 1.12.3, kallisto 0.46.0, star 2.7.0e & 2.7.1a

--- a/CBI/kallisto/Makefile
+++ b/CBI/kallisto/Makefile
@@ -11,7 +11,8 @@ $(DOWNLOAD_TARGET):
 	cd $(BUILD_HOME); \
 	curl -L -O https://github.com/pachterlab/kallisto/releases/download/v$(VERSION)/$(TARBALL); \
 	tar zxf $(TARBALL); \
-	mv $(NAME)_linux-v$(VERSION) $(NAME)-$(VERSION)
+	mv $(NAME) $(NAME)-$(VERSION)                   # 0.46.0
+#	mv $(NAME)_linux-v$(VERSION) $(NAME)-$(VERSION) # 0.45.x
 
 $(INSTALL_TARGET): $(DOWNLOAD_TARGET)
 	mkdir -p $(PREFIX)
