MODULES: plink/1.07, plink/1.90b6.10

--- a/CBI/Makefile
+++ b/CBI/Makefile
@@ -1,4 +1,4 @@
-all: bamutil bcl2fastq bedtools2 bowtie2 bwa byobu cellranger emacs gatk git-flow htop htslib kallisto libevent pindel qtop rsamtools shellcheck star tmux tophat tree
+all: bamutil bcl2fastq bedtools2 bowtie2 bwa byobu cellranger emacs gatk git-flow htop htslib kallisto libevent pindel plink qtop rsamtools shellcheck star tmux tophat tree
 
 bamutil:
 	cd $@; $(MAKE) all
@@ -43,6 +43,9 @@ libevent:
 	cd $@; $(MAKE) all
 
 pindel:
+	cd $@; $(MAKE) all
+
+plink:
 	cd $@; $(MAKE) all
 
 qtop:
