Use R_FUTURE_AVAILABLECORES_FALLBACK=1 by default

--- a/CBI/r-siteconfig/Makefile
+++ b/CBI/r-siteconfig/Makefile
@@ -17,3 +17,6 @@ $(INSTALL_TARGET): $(DOWNLOAD_TARGET)
 	cp -R $(<D)/* $(PREFIX)/
 	ls -la $(PREFIX)
 	@echo "SOFTWARE INSTALLED TO: $(PREFIX)"
+
+cleanup:
+	rm -rf -- $(DOWNLOAD_PATH)
