--- a/CBI/gcta/Makefile
+++ b/CBI/gcta/Makefile
@@ -7,13 +7,19 @@ ZIPBALL=$(NAME)_$(VERSION).zip
 ## SOFTWARE
 ## ----------------------------------------------------------
 $(DOWNLOAD_TARGET):
-	mkdir -p $(BUILD_HOME); \
-	cd $(BUILD_HOME); \
-	curl -L -O http://cnsgenomics.com/software/gcta/pre_gcta/$(ZIPBALL); \
-	ls -la; \
-	mkdir $(NAME)-$(VERSION); \
-	cd $(NAME)-$(VERSION); \
-	unzip ../$(ZIPBALL)
+	mkdir -p $(BUILD_HOME)
+	if [[ $(VERSION) == 1.26.0 ]]; then \
+	  cd $(BUILD_HOME); \
+	  curl -L -O http://cnsgenomics.com/software/gcta/pre_gcta/$(ZIPBALL); \
+	  mkdir $(NAME)-$(VERSION); \
+	  cd $(NAME)-$(VERSION); \
+	  unzip ../$(ZIPBALL); \
+	else \
+	  cd $(BUILD_HOME); \
+	  curl -L -O http://cnsgenomics.com/software/gcta/bin/$(ZIPBALL); \
+	  unzip $(ZIPBALL); \
+	  mv $(NAME)_$(VERSION) $(NAME)-$(VERSION); \
+	fi
 
 $(INSTALL_TARGET): $(DOWNLOAD_TARGET)
 	mv $(BUILD_HOME)/$(NAME)-$(VERSION) $(SOFTWARE_HOME)
