scl-devtoolset: add scl-devtoolset/8 + refresh

--- a/CBI/scl-devtoolset/Makefile
+++ b/CBI/scl-devtoolset/Makefile
@@ -1,12 +1,12 @@
 all: .incl
 
 
-.incl: .incl/4.lua .incl/6.lua .incl/7.lua
+.incl: .incl/4.lua .incl/6.lua .incl/7.lua .incl/8.lua
 
 .incl/%.lua: /opt/rh/devtoolset-%/enable
 	mkdir -p .incl/
 	echo "-- Don't edit! Created using: " > $@
-	echo "-- $(LMOD_DIR)/sh_to_modulefile $<" > $@
+	echo "-- $(LMOD_DIR)/sh_to_modulefile $<" >> $@
 	$(LMOD_DIR)/sh_to_modulefile $< >> $@
 
 clean:
