r: Save log for 'R CMD javareconf'

--- a/CBI/r/Makefile
+++ b/CBI/r/Makefile
@@ -40,8 +40,10 @@ post_install:
 	## Prevent package installations/updates in system library
 	chmod -R ugo-w $(PREFIX)/lib*/R/library
 	## Configure R for Java (so that 'rJava' can be installed)
-	$(PREFIX)/bin/R CMD javareconf
+	$(PREFIX)/bin/R CMD javareconf &> "$(BUILD_PATH)/javareconf.log"
+	cat "$(BUILD_PATH)/javareconf.log"
 	## Save log files
-	cp $(BUILD_PATH)/config.log $(PREFIX)/
-	cp $(BUILD_PATH)/make-check.log $(PREFIX)/
-	grep -A 28 -F "R is now configured" $(BUILD_PATH)/config.log > $(PREFIX)/config.log.summary
+	cp "$(BUILD_PATH)/config.log" $(PREFIX)/
+	cp "$(BUILD_PATH)/make-check.log" $(PREFIX)/
+	cp "$(BUILD_PATH)/javareconf.log" $(PREFIX)/
+	grep -A 28 -F "R is now configured" "$(BUILD_PATH)/config.log" > "$(PREFIX)/config.log.summary"
