--- a/CBI/htop/Makefile
+++ b/CBI/htop/Makefile
@@ -1,6 +1,3 @@
-#' Example:
-#' make VERSION=2.2.0
-
 include config.mk
 include ../utils.mk
 
@@ -8,8 +5,16 @@ include ../utils.mk
 ## ----------------------------------------------------------
 ## SOFTWARE
 ## ----------------------------------------------------------
+ifeq ($(VERSION),2.2.0)
 $(DOWNLOAD_TARGET):
 	mkdir -p $(BUILD_HOME); \
 	cd $(BUILD_HOME); \
 	curl -O http://hisham.hm/htop/releases/$(VERSION)/$(TARBALL); \
-	tar xvfz $(TARBALL)
+	tar xfz "$(TARBALL)"
+else
+$(DOWNLOAD_TARGET):
+	mkdir -p $(BUILD_HOME); \
+	cd $(BUILD_HOME); \
+	curl -L https://bintray.com/htop/source/download_file?file_path=$(TARBALL) -o $(TARBALL); \
+	tar xfz $(TARBALL)
+endif
