--- a/CBI/control-freec/Makefile
+++ b/CBI/control-freec/Makefile
@@ -14,6 +14,7 @@ $(DOWNLOAD_TARGET):
 
 
 $(BUILD_TARGET): $(DOWNLOAD_TARGET)
+	module --force purge; \
 	cd $(BUILD_PATH)/src; \
 	make; \
 	mkdir -p ../bin; \
