ROBUSTNESS: Making sure to 'module --force purge' all custom configs and installs

--- a/CBI/bamutil/Makefile
+++ b/CBI/bamutil/Makefile
@@ -14,12 +14,14 @@ $(DOWNLOAD_TARGET):
 
 $(BUILD_TARGET):
 	cd $(BUILD_PATH); \
+	module --force purge; \
 	make cloneLib; \
 	make
 
 $(INSTALL_TARGET): $(DOWNLOAD_TARGET)
 	mkdir -p $(PREFIX)
 	cd $(BUILD_PATH); \
+	module --force purge; \
 	make install INSTALLDIR=$(PREFIX); \
 	ls -la $(PREFIX)
 	@echo "SOFTWARE INSTALLED TO: $(PREFIX)"
