CLEANUP: Drop unnecessary quotes

--- a/CBI/rstudio/Makefile
+++ b/CBI/rstudio/Makefile
@@ -1,7 +1,7 @@
 include config.mk
 include ../utils.mk
 
-TARBALL="$(NAME)-$(VERSION)-x86_64-fedora.tar.gz"
+TARBALL=$(NAME)-$(VERSION)-x86_64-fedora.tar.gz
 
 ## ----------------------------------------------------------
 ## SOFTWARE
