--- a/CBI/rstudio/Makefile
+++ b/CBI/rstudio/Makefile
@@ -15,7 +15,9 @@ $(DOWNLOAD_TARGET):
 $(CONFIG_TARGET): $(DOWNLOAD_TARGET)
 	cd "$(BUILD_PATH)"; \
 	find . -type f -name "*.so" -exec ldd {} 2> /dev/null ';' | grep -F "not found" > "$(CONFIG_TARGET).tmp" || true
-	grep -q -F "not found" "$(CONFIG_TARGET).tmp" && { echo "ERROR: Missing system libraries:"; grep -F "not found" "$(CONFIG_TARGET).tmp" | uniq; exit 1; } 1>&2
+	if grep -q -F "not found" "$(CONFIG_TARGET).tmp"; then \
+	   { echo "ERROR: Missing system libraries:"; grep -F "not found" "$(CONFIG_TARGET).tmp" | uniq; } 1>&2; \
+	fi
 	mv "$(CONFIG_TARGET).tmp" "$(CONFIG_TARGET)"
 
 $(INSTALL_TARGET): $(CONFIG_TARGET)
