bedtools/2.3.0: new version + fixes bug #12

--- a/CBI/bedtools2/Makefile
+++ b/CBI/bedtools2/Makefile
@@ -13,7 +13,7 @@ $(DOWNLOAD_TARGET):
 	tar zxf $(TARBALL); \
 	mv $(NAME) $(NAME)-$(VERSION)
 
-$(INSTALL_TARGET):
+$(INSTALL_TARGET): $(DOWNLOAD_TARGET)
 	mkdir -p $(PREFIX); \
 	cd $(BUILD_HOME); \
 	cp -p -R $(NAME)-$(VERSION) $(PREFIX)/..
