--- a/CBI/scl-devtoolset/Makefile
+++ b/CBI/scl-devtoolset/Makefile
@@ -3,13 +3,13 @@ include ../utils.mk
 
 all: debug install_module
 
-.incl: .incl/4.lua .incl/6.lua .incl/7.lua .incl/8.lua .incl/9.lua
+.incl: .incl/4.lua .incl/6.lua .incl/7.lua .incl/8.lua .incl/9.lua .incl/10.lua
 
 .incl/%.lua: /opt/rh/devtoolset-%/enable
 	mkdir -p .incl/
 	echo "-- Don't edit! Created using: " > $@
 	echo "-- $(LMOD_DIR)/sh_to_modulefile $<" >> $@
-	$(LMOD_DIR)/sh_to_modulefile $< >> $@
+	LD_LIBRARY_PATH= $(LMOD_DIR)/sh_to_modulefile $< >> $@
 
 clean:
 	rm -f s.log
