samtools: Add support for installing legacy versions 0.1.12a and 0.1.18

--- a/CBI/samtools/Makefile
+++ b/CBI/samtools/Makefile
@@ -2,10 +2,19 @@
 #' make VERSION=2.2.0
 
 include config.mk
-include ../utils.mk
-
 
 TARBALL=$(NAME)-$(VERSION).tar.bz2
+
+URL=https://github.com/samtools/$(NAME)/releases/download/$(VERSION)/$(TARBALL)
+VERSION_X := $(shell echo "$(VERSION)" | sed -E 's/[.].*//')
+ifeq ($(VERSION_X),0)
+  VERSION_NO_SUFFIX := $(shell echo "$(VERSION)" | sed -E 's/[a-z]$$//')
+  URL=https://sourceforge.net/projects/samtools/files/samtools/$(VERSION_NO_SUFFIX)/$(TARBALL)/download
+  DOWNLOAD_TARGET_FILE=Makefile
+  CONFIG=false
+endif
+
+include ../utils.mk
 
 ## ----------------------------------------------------------
 ## SOFTWARE
@@ -13,5 +22,12 @@ TARBALL=$(NAME)-$(VERSION).tar.bz2
 $(DOWNLOAD_TARGET):
 	mkdir -p $(BUILD_HOME); \
 	cd $(BUILD_HOME); \
-	curl -L -O https://github.com/samtools/$(NAME)/releases/download/$(VERSION)/$(TARBALL); \
+	curl -L -o ${TARBALL} $(URL); \
 	tar jxf $(TARBALL)
+
+ifeq ($(VERSION_X),0)
+$(INSTALL_TARGET):
+	mkdir -p "$(PREFIX)/bin"
+	cd $(BUILD_PATH); \
+	cp samtools "$(PREFIX)/bin"
+endif
